--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://hyalin-git.github.io/Kasa/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
